--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,8 @@ script:
 
   # Run phpunit tests
   - cd tests
+  - which phpunit
+  - phpunit --version
   - sh -c "if [ '$CODECHECK' != '1' -a '$CODECHECK' != '2' ]; then phpunit --configuration phpunit.xml; fi"
   - cd ..
 
