--- a/.tx/config
+++ b/.tx/config
@@ -3,7 +3,7 @@ host = https://www.transifex.com
 lang_map = bg_BG: bg, cs_CZ: cs, fi_FI: fi, hu_HU: hu, nb_NO: nb, sk_SK: sk, th_TH: th, ja_JP: ja
 
 [nextcloud.serverinfo]
-file_filter = <lang>/serverinfo.po
+file_filter = translationfiles/<lang>/serverinfo.po
 source_file = translationfiles/templates/serverinfo.pot
 source_lang = en
 type = PO
