Upgrade to new PHP Analysis Engine
Signed-off-by: Daniel Kesselberg <mail@danielkesselberg.de>

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,9 @@
-imports:
-    - javascript
-    - php
+build:
+  nodes:
+    analysis:
+      tests:
+        override:
+          - php-scrutinizer-run
 
 tools:
     external_code_coverage: true
