--- a/.github/workflows/oci.yml
+++ b/.github/workflows/oci.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   oci:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     strategy:
       # do not stop on another job's failure
