--- a/.github/workflows/oci.yml
+++ b/.github/workflows/oci.yml
@@ -20,7 +20,7 @@ jobs:
       matrix:
         php-versions: ['7.4', '8.0', '8.1']
         databases: ['oci']
-        server-versions: ['master']
+        server-versions: ['stable25']
 
     name: php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
 
