--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -5,20 +5,17 @@ on:
   push:
     branches:
       - master
+      - main
       - stable*
 
 jobs:
-  static-psalm-analysis:
+  static-analysis:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        ocp-version: [ 'dev-stable25' ]
 
     name: Nextcloud ${{ matrix.ocp-version }}
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
 
       - name: Set up php
         uses: shivammathur/setup-php@v2
@@ -27,7 +24,7 @@ jobs:
           coverage: none
 
       - name: Install dependencies
-        run: composer install --dev
+        run: composer i
 
       - name: Run coding standards check
         run: composer run psalm
