chore: adjust commit message for dependabot
Signed-off-by: Daniel Kesselberg <mail@danielkesselberg.de>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,7 @@ updates:
     labels:
       - 3. to review
       - dependencies
+    commit-message:
+      prefix: fix
+      prefix-development: chore
+      include: scope
