--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"require-dev": {
-		"nextcloud/coding-standard": "^0.4.0",
-		"psalm/phar": "^4.22",
+		"nextcloud/coding-standard": "^v1.1.1",
+		"psalm/phar": "^5.15.0",
 		"bantu/ini-get-wrapper": "v1.0.1",
 		"phpunit/phpunit": "^9.5",
 		"nextcloud/ocp": "dev-stable25"
