--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,33 @@
 {
 	"require-dev": {
-		"nextcloud/coding-standard": "^v1.1.1",
-		"psalm/phar": "^5.15.0",
-		"bantu/ini-get-wrapper": "v1.0.1",
-		"phpunit/phpunit": "^9.5",
+		"bamarni/composer-bin-plugin": "^1.8",
+		"bantu/ini-get-wrapper": "1.0.1",
 		"nextcloud/ocp": "dev-master"
-	},
-	"scripts": {
-		"cs:check": "php-cs-fixer fix --dry-run --diff",
-		"cs:fix": "php-cs-fixer fix",
-		"psalm": "psalm.phar --threads=1",
-		"psalm:update-baseline": "psalm.phar --threads=1 --update-baseline --set-baseline=tests/psalm-baseline.xml",
-		"psalm:clear": "psalm.phar --clear-cache && psalm --clear-global-cache",
-		"psalm:fix": "psalm.phar --alter --issues=InvalidReturnType,InvalidNullableReturnType,MissingParamType,InvalidFalsableReturnType",
-		"lint": "find . -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l",
-		"test:unit": "phpunit -c tests/phpunit.xml --fail-on-warning"
 	},
 	"config": {
 		"allow-plugins": {
+			"bamarni/composer-bin-plugin": true,
 			"composer/package-versions-deprecated": true
 		},
 		"platform": {
 			"php": "8.1"
+		},
+		"sort-packages": true
+	},
+	"extra": {
+		"bamarni-bin": {
+			"bin-links": false,
+			"forward-command": true,
+			"target-directory": "vendor-bin"
 		}
+	},
+	"scripts": {
+		"cs:check": "vendor-bin/cs-fixer/vendor/bin/php-cs-fixer fix --dry-run --diff",
+		"cs:fix": "vendor-bin/cs-fixer/vendor/bin/php-cs-fixer fix",
+		"lint": "find . -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l",
+		"psalm": "vendor-bin/psalm/vendor/bin/psalm --threads=1",
+		"psalm:clear": "vendor-bin/psalm/vendor/bin/psalm --clear-cache && vendor-bin/psalm/vendor/bin/psalm --clear-cache --clear-global-cache",
+		"psalm:update-baseline": "vendor-bin/psalm/vendor/bin/psalm --update-baseline --set-baseline=tests/psalm-baseline.xml",
+		"test:unit": "vendor-bin/phpunit/vendor/bin/phpunit -c tests/phpunit.xml --fail-on-warning"
 	}
 }
